<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/menu_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="78dp"
        android:text="@string/menu"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/menu_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:onClick="toastMainActivity"
        android:text="@string/main_activity" />

    <Button
        android:id="@+id/btn_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_main"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:onClick="navigateToImageActivity"
        android:text="@string/img_activity" />

    <Button
        android:id="@+id/btn_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:onClick="navigateToHelloActivity"
        android:text="@string/hello_activity" />

    <Button
        android:id="@+id/btn_todo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_hello"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:onClick="navigateToTodoActivity"
        android:text="@string/todo_activity" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:minHeight="150dp"
        android:orientation="vertical"></LinearLayout>

</RelativeLayout>